syntax = "proto3";

package hello;

service HelloService {
	rpc SayHello (HelloRequest) returns (HelloReply); 
	rpc SayHellos (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}